sigue con errores

--- a/JavaPoolSirviendoHernan/web/Usuarios.html
+++ b/JavaPoolSirviendoHernan/web/Usuarios.html
@@ -50,11 +50,11 @@
  	   		</div>
  	     </div>
 	       <div class="wrap">
-	        <div class="main">	        	
-	        		<div class="section group">
+	        <div class="main">	        
+                    <div class="section group">
 				<div class="col_1_of_3 span_1_of_3">
 					<h2><span>Registro de Usuarios</span></h2>
-                                        <form action="ServeUsua?u=RegiUsua">
+                                        <form action="ServeUsua?u=RegiUsua" method="POST" id="AgrePer" name="AgrePer">
                                         <h2>Documento</h2><br>
 					<input id="txtes" type="text" name="Documento"/><br>
 					<h2>Nombres</h2><br>
