--- a/JavaPoolSirviendoHernan/web/Usuarios.html
+++ b/JavaPoolSirviendoHernan/web/Usuarios.html
@@ -2,27 +2,27 @@
 <html>
 <head>
 <title>Usuarios</title>
-<link rel="shortcut icon" href="Diseño/images/favicon.ico.ico"/>
+<link rel="shortcut icon" href="Diseno/images/favicon.ico.ico"/>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<link href="Diseño/css/style.css" rel="stylesheet" type="text/css"/>
-<link href="Diseño/css/slider.css" rel="stylesheet" type="text/css"/>
-<script src="Diseño/js/jquery.min.js" type="text/javascript"></script>
-<script src="Diseño/js/slidermodernizr.custom.js" type="text/javascript"></script>
+<link href="Diseno/css/style.css" rel="stylesheet" type="text/css"/>
+<link href="Diseno/css/slider.css" rel="stylesheet" type="text/css"/>
+<script src="Diseno/js/jquery.min.js" type="text/javascript"></script>
+<script src="Diseno/js/slidermodernizr.custom.js" type="text/javascript"></script>
 </head>
  <body>
    <!-- Background slider -->
  	<div class="slider">
  	      <ul id="cbp-bislideshow" class="cbp-bislideshow">
-					<li><img src="Diseño/images/1.jpg" alt="image01"/></li>
-					<li><img src="Diseño/images/2.jpg" alt="image02"/></li>
-					<li><img src="Diseño/images/3.jpg" alt="image03"/></li>
-					<li><img src="Diseño/images/4.jpg" alt="image04"/></li>
-					<li><img src="Diseño/images/5.jpg" alt="image05"/></li>
-					<li><img src="Diseño/images/6.jpg" alt="image06"/></li>
+					<li><img src="Diseno/images/1.jpg" alt="image01"/></li>
+					<li><img src="Diseno/images/2.jpg" alt="image02"/></li>
+					<li><img src="Diseno/images/3.jpg" alt="image03"/></li>
+					<li><img src="Diseno/images/4.jpg" alt="image04"/></li>
+					<li><img src="Diseno/images/5.jpg" alt="image05"/></li>
+					<li><img src="Diseno/images/6.jpg" alt="image06"/></li>
 				</ul>    
-	   <script src="Diseño/js/jquery.imagesloaded.min.js"></script>
-		<script src="Diseño/js/cbpBGSlideshow.min.js"></script>
+	   <script src="Diseno/js/jquery.imagesloaded.min.js"></script>
+		<script src="Diseno/js/cbpBGSlideshow.min.js"></script>
 		<script>
 			$(function() {
 				cbpBGSlideshow.init();
@@ -33,7 +33,7 @@
 	    <div class="header_top">
 		 	  <div class="wrap">	 			
 				<div class="logo">
-					<a href="index.html"><img src="Diseño/images/logo.png" alt=""></a>
+					<a href="index.html"><img src="Diseno/images/logo.png" alt=""></a>
 				</div>	
 				<div class="nav">			
 				  <ul>
