--- a/JavaPoolSirviendoHernan/web/contact.html
+++ b/JavaPoolSirviendoHernan/web/contact.html
@@ -10,7 +10,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <title>Free The Brewery Website Template | Contact :: w3layouts</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<link href="Diseño/css/style.css" rel="stylesheet" type="text/css" media="all">
+<link href="Diseno/css/style.css" rel="stylesheet" type="text/css" media="all">
 </head>
  <body>
 	    <div class="header_top">
