--- a/JavaPoolSirviendoHernan/web/events.html
+++ b/JavaPoolSirviendoHernan/web/events.html
@@ -10,10 +10,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <title>Free The Brewery  Website Template | Events :: w3layouts</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<link href="Diseño/css/style.css" rel="stylesheet" type="text/css"/>
-<link href="Diseño/css/slider.css" rel="stylesheet" type="text/css"/>
-<script src="Diseño/js/jquery.min.js" type="text/javascript"></script>
-<script src="Diseño/js/slidermodernizr.custom.js" type="text/javascript"></script>
+<link href="Diseno/css/style.css" rel="stylesheet" type="text/css"/>
+<link href="Diseno/css/slider.css" rel="stylesheet" type="text/css"/>
+<script src="Diseno/js/jquery.min.js" type="text/javascript"></script>
+<script src="Diseno/js/slidermodernizr.custom.js" type="text/javascript"></script>
 </head>
  <body>
    <!-- Background slider -->
